fixed more colors and added a scrollbar

--- a/growthbot.css
+++ b/growthbot.css
@@ -135,7 +135,7 @@
    
    .case-hero {
        text-align: center;
-       padding: 5rem 2rem;
+       padding: 2rem 2rem;
    }
    
    /* ---------- column layouts---------- */
@@ -212,3 +212,27 @@
     text-align: center;
    }
    
+
+
+    /* scrollbar */
+
+    ::-webkit-scrollbar {
+        width: 14px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background: #f5f5f5;
+        border-radius: var(--radius);
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background: #9cbbb7;
+        border: 3px solid black;
+        border-radius: var(--radius);
+        box-shadow: 4px 4px 0px #2e211c;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+        background: #c06226;
+        box-shadow: 6px 6px 0px #984619;
+    }
