--- a/style.css
+++ b/style.css
@@ -318,6 +318,31 @@ footer{
 }
 
 
+  
+/* scrollbar */
+
+::-webkit-scrollbar {
+    width: 14px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+    border-radius: var(--radius);
+}
+
+::-webkit-scrollbar-thumb {
+    background: #9cbbb7;
+    border: 3px solid black;
+    border-radius: var(--radius);
+    box-shadow: 4px 4px 0px #2e211c;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #c06226;
+    box-shadow: 6px 6px 0px #984619;
+}
+
+
 
 
 
